--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="nailinhead2">
 <head>
-    <!-- @if production !>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-route.min.js"></script>
-    <!-- @endif -->
-    <!-- @exclude-->
-    <meta charset="utf-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-route.js"></script>
-    <!-- @endexclude-->
     <script src="js/index.js"></script>
     <script src="js/angular-parse.js"></script>
     <link href="css/main.css" rel="stylesheet">
@@ -23,7 +16,7 @@
         <div>
         <span class="logo">
             <img src="img/logo.svg"/>
-            <sup><!-- @echo version --><!-- @exclude-->DEV<!-- @endexclude--></sup>
+            <sup>0.9.7</sup>
         </span>
         <a href="javascript:void(0)" class="logout" ng-click="logout()">Выйти</a>
         <nav>
